--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Gabriell Sales
 SITE_MAIN_LANGUAGE=en
-SITE_BASE_URL=https://gabriellsales.netlify.app/
+SITE_BASE_URL=https://notas.gabriellsales.com.br;
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
